force-app/main/default/objects/Applicant__c/fields/Applicant_ID__c.field-meta.xml
<CustomField>
    <fullName>Applicant_ID__c</fullName>
    <displayFormat>APP-{0000}</displayFormat>
    <label>Applicant ID</label>
    <type>AutoNumber</type>
</CustomField>