force-app/main/default/objects/Applicant__c/fields/Date_of_application__c.field-meta.xml
<CustomField>
    <fullName>Date_of_application__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date of application</label>
    <type>Date</type>
</CustomField>