force-app/main/default/objects/Applicant__c/fields/Final_Status__c.field-meta.xml
<CustomField>
    <fullName>Final_Status__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Final Status</label>
    <length>18</length>
    <type>Text</type>
</CustomField>