force-app/main/default/objects/Applicant__c/fields/Phone_no__c.field-meta.xml
<CustomField>
    <fullName>Phone_no__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Phone no</label>
    <type>Phone</type>
</CustomField>